--- a/ethcore/vm/Cargo.toml
+++ b/ethcore/vm/Cargo.toml
@@ -18,3 +18,5 @@ keccak-hash = { path = "../../util/hash" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 elastic-array = "0.10"
+evmc-client = { git = "https://github.com/second-state/evmc", tag = "v6.3.1-rust-evmc-client-rc.3" }
+hex = "0.4"
