--- a/ethcore/Cargo.toml
+++ b/ethcore/Cargo.toml
@@ -55,6 +55,8 @@ journaldb = { path = "../util/journaldb" }
 siphasher = "0.1.1"
 failure = "0.1.5"
 serde_json = "1.0"
+hex = "0.4"
+evmc-client = { git = "https://github.com/second-state/evmc", tag = "v6.3.1-rust-evmc-client-rc.2" }
 
 [dev-dependencies]
 tempdir = "0.3"
